--- a/acmart.bib
+++ b/acmart.bib
@@ -78,3 +78,11 @@
   month =	 jun,
   note =	 {\url{http://www.ctan.org/pkg/subcaption}}
 }
+
+@Manual{Carlisle04:Textcase,
+  title = 	 {The \textsl{textcase} package},
+  author = 	 {David Carlisle},
+  month = 	 oct,
+  year = 	 2004,
+  note = 	  {\url{http://www.ctan.org/pkg/textcase}}}
+
