--- a/README
+++ b/README
@@ -119,5 +119,5 @@ Version 1.39    Added \authornotemark commmand
 
 Version 1.40    Bibliography changes
 		Added processing of one-compoment ccsdesc nodes
-		Bug fixes
+		Bug fixes.
 				
