--- a/README
+++ b/README
@@ -120,4 +120,6 @@ Version 1.39    Added \authornotemark commmand
 Version 1.40    Bibliography changes
 		Added processing of one-compoment ccsdesc nodes
 		Bug fixes.
+		Made the height a multiple of \baselineskip + \topskip
+		Added cleveref
 				
