--- a/acmart.dtx
+++ b/acmart.dtx
@@ -664,7 +664,7 @@
 % }
 % \end{verbatim}
 % However, the comma after postcode is unfortunate:  the address will
-% be typeset (with a SIG format) as
+% be typeset (in some formats) as
 % \begin{verbatim}
 % Fluginstitut
 % Sonenallee 17
@@ -4638,15 +4638,19 @@ Computing Machinery]
 % \begin{macro}{\streetaddress}
 % \changes{v1.15}{2016/07/03}{Added macro}
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
+% \changes{v1.40}{2017/06/15}{We now do not print this even in SIG}
 % \begin{macro}{\city}
 % \changes{v1.15}{2016/07/03}{Added macro}
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
+% \changes{v1.40}{2017/06/15}{We now do not print this even in SIG}
 % \begin{macro}{\state}
 % \changes{v1.15}{2016/07/03}{Added macro}
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
+% \changes{v1.40}{2017/06/15}{We now do not print this even in SIG}
 % \begin{macro}{\postcode}
 % \changes{v1.15}{2016/07/03}{Added macro}
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
+% \changes{v1.40}{2017/06/15}{We now do not print this even in SIG}
 % \begin{macro}{\country}
 % \changes{v1.15}{2016/07/03}{Added macro}
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
@@ -4659,24 +4663,24 @@ Computing Machinery]
 %   We follow the strange American tradtion of no comma before zip
 %   code.  
 %    \begin{macrocode}
+\def\streetaddress#1{\unskip\ignorespaces}
+\def\city#1{\unskip\ignorespaces}
+\def\state#1{\unskip\ignorespaces}
+\def\postcode#1{\unskip\ignorespaces}
 \if@ACM@journal
   \def\position#1{\unskip\ignorespaces}
   \def\institution#1{#1\ignorespaces}
   \newcommand\department[2][0]{}
-  \def\streetaddress#1{\unskip\ignorespaces}
-  \def\city#1{\unskip\ignorespaces}
-  \def\state#1{\unskip\ignorespaces}
-  \def\postcode#1{\unskip\ignorespaces}
   \def\country#1{\unskip\ignorespaces}
 \else
   \def\position#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
   \def\institution#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
   \newcommand\department[2][0]{\if@ACM@affiliation@obeypunctuation
     #2\else#2\par\fi}%
-  \def\streetaddress#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
-  \let\city\@ACM@addtoaddress
-  \let\state\@ACM@addtoaddress
-  \def\postcode#1{\if@ACM@affiliation@obeypunctuation#1\else\unskip\space#1\fi}%
+%  \def\streetaddress#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
+%  \let\city\@ACM@addtoaddress
+%  \let\state\@ACM@addtoaddress
+%  \def\postcode#1{\if@ACM@affiliation@obeypunctuation#1\else\unskip\space#1\fi}%
   \let\country\@ACM@addtoaddress
 \fi
 %    \end{macrocode}
