--- a/sample-sigchi.tex
+++ b/sample-sigchi.tex
@@ -7,12 +7,13 @@
 %\setcopyright{none}
 %\setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
-\setcopyright{rightsretained}
+%\setcopyright{rightsretained}
 %\setcopyright{usgov}
 %\setcopyright{usgovmixed}
 %\setcopyright{cagov}
+\setcopyright{licensedcagov}
 %\setcopyright{cagovmixed}
-
+%\setcopyright{licensedothergov}
 
 % DOI
 \acmDOI{10.475/123_4}
