Added new badges.  Rearranged bib files

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -835,7 +835,13 @@
 % \begin{verbatim}
 % \acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 % \end{verbatim}
-% 
+% Some badges provided by the ACM are
+% |artifacts_available|,
+% |artifacts_evaluated_functional|,
+% |artifacts_evaluated_reusable|,
+% |results_replicated|, and
+% |results_reproduced|.  
+%
 %
 %
 % \DescribeMacro{\startPage}%
@@ -1577,7 +1583,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/06/15 v1.40 Typesetting articles for Association of
+[2017/06/25 v1.41 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1637,7 +1643,9 @@ Computing Machinery]
 % \changes{v1.38}{2017/05/13}{Increase default font size for SIGPLAN}
 % \changes{v1.40}{2017/05/27}{Bibliography changes}
 % \changes{v1.40}{2017/06/15}{Added package cleveref}
-% \changes{v1.40}{2017/06/16}{Added new copyright version: licensedcagov}
+% \changes{v1.40}{2017/06/16}{Added new copyright version:
+% licensedcagov}
+% \changes{v1.41}{2017/06/25}{Added new badges}
 %
 %
 % And the driver code:
