--- a/sample-sigchi.tex
+++ b/sample-sigchi.tex
@@ -163,12 +163,13 @@ ACM SIG Proceedings.
   \label{fig:teaser}
 \end{teaserfigure}
 
+\acmBadgeR{artifacts_evaluated_functional}
 
 \maketitle
 
 \input{samplebody-conf}
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{sigproc} 
+\bibliography{sample-bibliography} 
 
 \end{document}
