--- a/sample-sigconf-authordraft.tex
+++ b/sample-sigconf-authordraft.tex
@@ -157,6 +157,6 @@ ACM SIG Proceedings.\footnote{This is an abstract footnote}
 \input{samplebody-conf}
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{sigproc} 
+\bibliography{sample-bibliography} 
 
 \end{document}
