--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -158,12 +158,13 @@ ACM SIG Proceedings.\footnote{This is an abstract footnote}
 
 \keywords{ACM proceedings, \LaTeX, text tagging}
 
+\acmBadgeR{artifacts_available}
 
 \maketitle
 
 \input{samplebody-conf}
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{sigproc} 
+\bibliography{sample-bibliography} 
 
 \end{document}
