--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -166,12 +166,14 @@ ACM SIG Proceedings.
   \label{fig:teaser}
 \end{teaserfigure}
 
+\acmBadgeL{artifacts_evaluated_reusable}
+\acmBadgeR{results_reproduced}
 
 \maketitle
 
 \input{samplebody-conf}
 
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{sigproc} 
+\bibliography{sample-bibliography} 
 
 \end{document}
