--- a/README
+++ b/README
@@ -123,4 +123,7 @@ Version 1.40    Bibliography changes
 		Made the height a multiple of \baselineskip + \topskip
 		Added cleveref
 		We no longer print street address in SIGs
+
+Version 1.41    Rearranged bib files
+		Added new badges
 		
