Fix typo in docu

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -508,7 +508,7 @@
 % Similarly you can repeat \cs{email} command.
 %
 % You may have several authors with the same affiliation, different
-% affiliations or overlapping affiliations (author~$A_1$ is affiliated
+% affiliations, or overlapping affiliations (author~$A_1$ is affiliated
 % with institutions $I_1$ and $I_2$, while author $A_2$ is affiliated
 % with $I_2$ only, and author $A_3$ is affiliated with
 % $I_1$ and $I_3$, \ldots).  The recommended solution is to put the
@@ -577,7 +577,7 @@
 % \DescribeMacro{\country}%
 % The \cs{affiliation} and \cs{additionalaffiliation} commands are
 % further structured to interact with the metadata extraction tools.
-% Inside the this command you should use \cs{position},
+% Inside this command you should use \cs{position},
 % \cs{institution}, \cs{department}, \cs{city}, \cs{streetaddress},
 % \cs{state}, \cs{postcode} and \cs{country} macros to indicate the
 % corresponding parts of the affiliation.  Note that in some cases
