--- a/acmart.dtx
+++ b/acmart.dtx
@@ -577,7 +577,7 @@
 % \DescribeMacro{\country}%
 % The \cs{affiliation} and \cs{additionalaffiliation} commands are
 % further structured to interact with the metadata extraction tools.
-% Inside this command you should use \cs{position},
+% Inside these commands you should use \cs{position},
 % \cs{institution}, \cs{department}, \cs{city}, \cs{streetaddress},
 % \cs{state}, \cs{postcode} and \cs{country} macros to indicate the
 % corresponding parts of the affiliation.  Note that in some cases
