Deleted ACM badges

--- a/README
+++ b/README
@@ -126,4 +126,5 @@ Version 1.40    Bibliography changes
 
 Version 1.41    Rearranged bib files
 		Added new badges
-		
+
+Version 1.42    Deleted ACM badges
