--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -15,7 +15,7 @@
 \acmMonth{3}
 
 %\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
-\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+%\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 
 % Copyright
 \setcopyright{acmcopyright}
