--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -29,7 +29,7 @@
 \acmPrice{15.00}
 
 %\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
-\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+%\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 
 
 \begin{document}
@@ -166,8 +166,6 @@ ACM SIG Proceedings.
   \label{fig:teaser}
 \end{teaserfigure}
 
-\acmBadgeL{artifacts_evaluated_reusable}
-\acmBadgeR{results_reproduced}
 
 \maketitle
 
