--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -28,7 +28,7 @@
 \acmPrice{15.00}
 
 %\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
-\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+%\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
 
 \begin{document}
 \title{SIGCHI Extended Abstracts Sample File}
