--- a/acmart.dtx
+++ b/acmart.dtx
@@ -792,7 +792,7 @@
 % \end{verbatim}
 % Note that you do not need to put the dollar sign here, just the
 % amount.  By default the price is \$15.00, unless the copyright is
-% set to |usgov| or |rightsretained|, when it is suppressed  Note that to
+% set to |usgov| or |rightsretained|, when it is suppressed.  Note that to
 % override the defaults you need to set the price \emph{after} the
 % \cs{setcopyright} command to override the default.  Also, the
 % command |\acmPrice{}| suppresses the printing of the price.
