Remove text that should not appear on the paper, according to ACM RightsReview.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4092,13 +4092,7 @@ Computing Machinery]
    by an employee, or contractor of the national government. As such,
    the Government retains a nonexclusive, royalty-free right to
    publish or reproduce this article, or to allow others to do so, for
-   Government purposes only. Permission to make digital or hard copies
-   for personal or classroom use is granted. Copies must bear this
-   notice and the full citation on the first page. Copyrights for
-   components of this work owned by others than ACM must be
-   honored. To copy otherwise, distribute, republish, or post,
-   requires prior specific permission and\hspace*{.5pt}/or a
-   fee. Request permissions from permissions@acm.org.
+   Government purposes only.
   \or % cagov
    This article was authored by employees of the Government of Canada.
    As such, the Canadian government retains all interest in the
