'usgovmixed' is only for papers by U.S. government agency affiliates.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4089,7 +4089,7 @@ Computing Machinery]
    source.
   \or % usgovmixed
    ACM acknowledges that this contribution was authored or co-authored
-   by an employee, or contractor of the national government. As such,
+   by an employee, or contractor of the United States government. As such,
    the Government retains a nonexclusive, royalty-free right to
    publish or reproduce this article, or to allow others to do so, for
    Government purposes only.
