Another bug with country

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -4692,13 +4692,11 @@ Computing Machinery]
 % \changes{v1.15}{2016/07/03}{Added macro}
 % \changes{v1.33}{2017/03/28}{Added obeypunctuation code}
 % \changes{v1.40}{2017/05/27}{Fixed bugs with extra spaces}
+% \changes{v1.43}{2017/07/11}{Added comma before country for journals}
 %   Theoretically we can define the macros for \cs{affiliation} inside
 %   the \cs{@mkauthors}-style commands.  However, this would lead to a
 %   strange error if an author uses them outside \cs{affiliation}.  Of
 %   course we can make them produce an error message, but\ldots
-%
-%   We follow the strange American tradtion of no comma before zip
-%   code.  
 %    \begin{macrocode}
 \def\streetaddress#1{\unskip\ignorespaces}
 \def\postcode#1{\unskip\ignorespaces}
@@ -4708,7 +4706,7 @@ Computing Machinery]
   \def\city#1{\unskip\ignorespaces}
   \def\state#1{\unskip\ignorespaces}
   \newcommand\department[2][0]{}
-  \def\country#1{#1\ignorespaces}
+  \def\country#1{\if@ACM@affiliation@obeypunctuation\else, \fi#1\ignorespaces}
 \else
   \def\position#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
   \def\institution#1{\if@ACM@affiliation@obeypunctuation#1\else#1\par\fi}%
