typo: 'acls' -> 'acks'

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1256,7 +1256,7 @@
 % thanks inside this environment.
 %
 % As for |printonly| and |screenonly| environments,
-% |\begin{acks}| and |\end{acls}| should start the
+% |\begin{acks}| and |\end{acks}| should start the
 % line of their own (no leading or trailing spaces).
 %
 % \DescribeMacro{\grantsponsor}%
