--- a/README
+++ b/README
@@ -131,3 +131,7 @@ Version 1.42    Deleted ACM badges
 		Bug fixes
 
 Version 1.43    Bug fixes
+
+Version 1.44    Bug fixes.
+		Empty DOI and ISBN suppress printing DOI or ISBN lines
+		
