Added acknowledgements to contributors

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -98,12 +98,25 @@
 % package.
 %
 %  I am grateful to
-%  Matthew Fluet, 
+%  Leif Andersen, 
+%  Dirk Beyer,
+%  Michael Ekstrand,
+%  Matthew Fluet,
+%  Paolo G.~Giarrusso,
+%  Ben Greenman,
+%  Ben Liblit,
+%  Frank Mittelbach, 
+%  Ross Moore,
 %  John Owens,
+%  Joel Nider, 
+%  Tobias Pape,
+%  Mathias Rav, 
+%  Matteo Riondato, 
 %  Craig Rodkin,
 %  Bernard Rous,
 %  David Shamma,
-%  Stephen Spencer
+%  Stephen Spencer,
+%  John Wickerson, 
 %  and many others for their invaluable help.
 %
 % The development version of the package is available at
@@ -1593,7 +1606,7 @@
 %</gobble>
 %<class>\ProvidesClass{acmart}
 %<acmthm>\ProvidesPackage{acmthm}
-[2017/07/30 v1.44 Typesetting articles for Association of
+[2017/08/12 v1.44 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
